# NIFF

./: .gitignore  README.md  plot_kernel_mass_ratio.ipynb  pyproject.toml  show_spatial_kernel.ipynb
torch_niff/: __init__.py  convnext_niff.py  densenet_niff_full.py  densenet_niff_splitconv.py  misc_niff.py  mobilenet_niff.py  niff_big.py  niff_full.py  niff_small.py  resnet_niff_full.py  resnet_niff_splitconv.py
